--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,36 @@
-bson~=0.5.10
-pymongo~=4.6.0
-python-dotenv~=1.0.1
-Flask~=3.1.0
-Flask-Cors~=5.0.0
 gunicorn==21.2.0
+asgiref==3.8.1
+bcrypt==4.2.0
+blinker==1.9.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+dnspython==2.7.0
+docker==7.1.0
+Flask~=3.0.0
+Flask-Bcrypt==1.0.1
+Flask-Cors~=4.0.0
+Flask-JWT-Extended==4.6.0
 gevent==24.11.1
+greenlet==3.1.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2~=3.1.2
+librouteros==3.2.1
+MarkupSafe==3.0.2
+PyJWT==2.9.0
+pymongo~=4.9.2
+python-dotenv~=1.0.0
+requests==2.32.3
+RouterOS-api==0.18.1
+typing_extensions==4.12.2
+urllib3==2.2.3
+Werkzeug==3.1.3
+zope.event==5.0
+zope.interface==7.1.1
+cachetools~=5.5.0
+APScheduler~=3.10.4
+celery~=5.4.0
+argparse~=1.4.0
+redis==5.0.1
+Booktype~=1.5
